--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.1.3
   http: ^0.13.5
   shared_preferences: ^2.0.15
+  country_state_city_picker: ^1.2.8
 
 dev_dependencies:
   flutter_test:
